--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -9,7 +9,7 @@
       </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let i of [1, 2, 3]">
+        <tr *ngFor="let i of [1, 2, 3]" (click)="setCurrentFighter(fighter)">
           <th scope="row">{{i}}</th>
           <td>{{i}}</td>
           <td>{{i}}</td>
@@ -20,4 +20,8 @@
       <input type="button" class="btn btn-edit">
     </tfoot>
   </table>
+  <app-fighter-details *ngIf="currentFighter" [model]="currentFighter" ]>
+  </app-fighter-details>
 </div>
+
+
