Ajout info quand click

--- a/fighters-stats/src/app/fighter/fighter-details/fighter-details.component.html
+++ b/fighters-stats/src/app/fighter/fighter-details/fighter-details.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="fighterForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="fighterForm">
   <div class="row">
     <div class="col-6">
       <label for="first-name">
