--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -10,7 +10,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let fighter of fightersList">
+      <tr *ngFor="let fighter of fightersList" (click)="setCurrentFighter(fighter)">
         <th scope="row">{{fighter._id}}</th>
         <td>{{fighter._firstName}}</td>
         <td>{{fighter._name}}</td>
@@ -21,13 +21,11 @@
       <input type="button" class="btn btn-edit">
     </tfoot>
   </table>
-  <app-fighter-details *ngIf="currentFighter" [model]="currentFighter" ]>
-  </app-fighter-details>
+  <app-fighter-details *ngIf="currentFighter" [model]="currentFighter" ></app-fighter-details>
   </div>
   <div *ngIf="!fightersList">
     <p>Chargement ...</p>
   </div>
-      </tfoot>
 </div>
 
 
