--- a/fighters-stats/src/app/fighter/fighter-details/fighter-details.component.html
+++ b/fighters-stats/src/app/fighter/fighter-details/fighter-details.component.html
@@ -7,37 +7,61 @@
       <input class="form-control" id="first-name" type="text" formControlName="firstName">
     </div>
     <div class="col-6">
-      <label for="lastName">
+      <label for="name">
         Prénom
       </label>
-      <input class="form-control" id="lastName" type="text" formControlName="lastName">
+      <input class="form-control" id="name" type="text" formControlName="name">
+    </div>
+    <div class="col-6">
+      <label for="age">
+        Age
+      </label>
+      <input class="form-control" id="age" type="text" formControlName="age">
+    </div>
+    <div class="col-6">
+      <label for="weight">
+        Weight
+      </label>
+      <input class="form-control" id="weight" type="text" formControlName="weight">
+    </div>
+    <div class="col-6">
+      <label for="height">
+        Height
+      </label>
+      <input class="form-control" id="height" type="text" formControlName="height">
+    </div>
+    <div class="col-6">
+      <label for="reach">
+        Reach
+      </label>
+      <input class="form-control" id="reach" type="text" formControlName="reach">
+    </div>
+    <div class="col-6">
+      <label for="nbWin">
+        number Wins
+      </label>
+      <input class="form-control" id="nbWin" type="text" formControlName="nbWin">
+    </div>
+    <div class="col-6">
+      <label for="nbLose">
+        number Looses
+      </label>
+      <input class="form-control" id="nbLose" type="text" formControlName="nbLose">
+    </div>
+    <div class="col-6">
+      <label for="sexe">
+        Sexe
+      </label>
+      <input class="form-control" id="sexe" type="text" formControlName="sexe">
+    </div>
+    <div class="col-6">
+      <label for="category">
+        Category
+      </label>
+      <input class="form-control" id="category" type="text" formControlName="category">
     </div>
   </div>
 
-  <div class="form-group mt-3" formGroupName="address">
-    <h2>
-      Adresse
-    </h2>
-    <div class="row">
-      <div class="col-4">
-        <label for="street">
-          Rue
-        </label>
-        <input class="form-control" id="street" type="text" formControlName="street">
-      </div>
-      <div class="col-4">
-        <label for="city">
-          Ville
-        </label>
-        <input class="form-control" id="city" type="text" formControlName="city">
-      </div>
-      <div class="col-4">
-        <label for="zip">
-          Code Postal
-        </label>
-        <input class="form-control" id="zip" type="text" formControlName="zip">
-      </div>
-    </div>
-  </div>
+
   <input type="submit" class="btn btn-primary mt-3" value="Valider">
 </form>
