last push petite modif

--- a/fighters-stats/src/app/fighter/fighter-details/fighter-details.component.html
+++ b/fighters-stats/src/app/fighter/fighter-details/fighter-details.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="fighterForm">
   <div class="row">
     <div class="col-6">
-      <label for="first-name">
+      <label for="firstName">
         Nom
       </label>
-      <input class="form-control" id="first-name" type="text" formControlName="firstName">
+      <input class="form-control" id="firstName" type="text" formControlName="firstName">
     </div>
     <div class="col-6">
       <label for="name">
