--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -3,7 +3,7 @@
     <table class="table table-striped">
       <thead>
       <tr>
-        <th scope="col" class="table-title-id">ID</th>
+        <th scope="col">ID</th>
         <th scope="col">Firstname</th>
         <th scope="col">Lastname</th>
         <th scope="col">Weight</th>
