--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -1,28 +1,1 @@
-<div class="container-fluid">
-  <div *ngIf="fightersList">
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Firstname</th>
-        <th scope="col">Lastname</th>
-        <th scope="col">Weight</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let fighter of fightersList">
-        <th scope="row">{{fighter._id}}</th>
-        <td>{{fighter._firstName}}</td>
-        <td>{{fighter._name}}</td>
-        <td>{{fighter._weight}}</td>
-      </tr>
-      </tbody>
-      <tfoot>
-      <input type="button" class="btn btn-edit">
-      </tfoot>
-    </table>
-  </div>
-  <div *ngIf="!fightersList">
-    <p>Chargement ...</p>
-  </div>
-</div>
+<p>fighter works!</p>
