Ok je crois qu'on est pas mal

--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -1,3 +1,10 @@
+<div class="modal-dialog modal-dialog-scrollable">
+  <div class="modal-content">
+    <div class="modal-header">
+      <p>ok</p>
+    </div>
+  </div>
+</div>
 <div class="container-fluid">
   <div *ngIf="fightersList">
     <table class="table table-striped">
