Ok je crois qu'on est pas mal

--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -1,1 +1,7 @@
-<p>fighter works!</p>
+<div class="modal-dialog modal-dialog-scrollable">
+  <div class="modal-content">
+    <div class="modal-header">
+      <p>ok</p>
+    </div>
+  </div>
+</div>
