--- a/fighters-stats/src/app/fighter/fighter.component.html
+++ b/fighters-stats/src/app/fighter/fighter.component.html
@@ -11,10 +11,10 @@
       </thead>
       <tbody>
       <tr *ngFor="let fighter of fightersList" (click)="setCurrentFighter(fighter)">
-        <th scope="row">{{fighter._id}}</th>
-        <td>{{fighter._firstName}}</td>
-        <td>{{fighter._name}}</td>
-        <td>{{fighter._weight}}</td>
+        <th scope="row">{{fighter.id}}</th>
+        <td>{{fighter.firstName}}</td>
+        <td>{{fighter.name}}</td>
+        <td>{{fighter.weight}}</td>
       </tr>
       </tbody>
       <tfoot>
